--- a/fixtures/package.json
+++ b/fixtures/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "npm-dependencies",
+  "version": "0.0.1",
   "dependencies": {
     "@guardian/source-foundations": "8.0.0",
     "@guardian/core-web-vitals": "2.0.2"
