--- a/fixtures/package.json
+++ b/fixtures/package.json
@@ -2,6 +2,7 @@
   "name": "npm-dependencies",
   "version": "0.0.1",
   "dependencies": {
+    "@types/node": "~18.11",
     "@guardian/source-foundations": "8.0.0",
     "@guardian/core-web-vitals": "2.0.2"
   },
