--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
         run: deno lint src
 
       - name: Test
-        run: deno test src --allow-net=registry.npmjs.org
+        run: deno test src --allow-net=unpkg.com
           
   working_package:
     runs-on: ubuntu-latest
@@ -49,7 +49,7 @@ jobs:
       
       - run: |
           deno run \
-            --allow-net=registry.npmjs.org \
+            --allow-net=unpkg.com \
             --allow-read=. \
             src/main.ts \
             fixtures/package_valid.json  \
@@ -72,7 +72,7 @@ jobs:
 
       - run: |
           deno run \
-            --allow-net=registry.npmjs.org \
+            --allow-net=unpkg.com \
             --allow-read=. \
             src/main.ts \
             fixtures/package.json  \
@@ -95,7 +95,7 @@ jobs:
 
       - run: |
           deno run \
-            --allow-net=registry.npmjs.org \
+            --allow-net=unpkg.com \
             --allow-read=. \
             src/main.ts \
             fixtures/package_duplicate.json  \
