--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,4 +1,7 @@
 {
+  "tasks": {
+    "test:dcr": "deno run -A src/cli.ts https://raw.githubusercontent.com/guardian/dotcom-rendering/mxdvl/pin-versions/dotcom-rendering/package.json --cache"
+  },
   "compilerOptions": {
     "noUncheckedIndexedAccess": true,
     "lib": ["deno.window"]
