--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
 
       - uses: denoland/setup-deno@v1
         with:
-          deno-version: v1.x
+          deno-version: v1.33.x
 
       - name: Cache Deno dependencies 
         uses: actions/cache@v3
@@ -31,5 +31,5 @@ jobs:
       - name: Test
         run: |
           deno test src \
-            --allow-net \
+            --allow-net=unpkg.com \
             --allow-env=CI
