--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,5 +32,5 @@ jobs:
         run: |
           deno test src \
             --allow-read=fixtures \
-            --allow-net=unpkg.com,raw.githubusercontent.com \
+            --allow-net=cdn.jsdelivr.net,raw.githubusercontent.com \
             --allow-env=CI
