--- a/fixtures/package.json
+++ b/fixtures/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "npm-dependencies",
-  "version": "0.0.1",
-  "private": true,
-  "dependencies": {
-    "@types/node": "~18.11",
-    "@guardian/source-foundations": "8.0.0",
-    "@guardian/core-web-vitals": "2.0.2"
-  },
-  "devDependencies": {
-    "@guardian/libs": "^12",
-    "@guardian/ab-react": "^2.0.1"
-  }
+	"name": "npm-dependencies",
+	"version": "0.0.1",
+	"private": true,
+	"dependencies": {
+		"@types/node": "18.11.19",
+		"@guardian/source-foundations": "8.0.0",
+		"@guardian/core-web-vitals": "2.0.2"
+	},
+	"devDependencies": {
+		"@guardian/libs": "12.0.1",
+		"@guardian/ab-react": "2.0.1"
+	},
+	"known_issues": {}
 }
